[tool.poetry]
name = "bond-pricing"
version = "0.1.0"
description = "Compact fixed-income valuation and quote-validation engine."
authors = ["Shreshtha Chakraborty"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.3"
numpy = "^2.5.0"
scipy = "^1.18.0"
matplotlib = "^3.11.0"
yfinance = "^1.4.1"
jupyter = "^1.1.1"
ipykernel = "^7.3.0"
quantlib-python = "^1.18"
scipy-stubs = "~=1.18.0"
pandas-stubs = "~=3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
